--- a/EE2405_Exam_2_Part_2_v2(1).ipynb
+++ b/EE2405_Exam_2_Part_2_v2(1).ipynb
@@ -94,13 +94,13 @@
         "# We'll generate this many sample datapoints\n",
         "############################################################\n",
         "#@markdown Please fill in the number of samples (the sample should be large enough, but not too large for computation).\n",
-        "SAMPLES = 0 #@param {type:\"number\"}\n",
+        "SAMPLES =  1000#@param {type:\"number\"}\n",
         "############################################################\n",
         "\n",
         "\n",
         "############################################################\n",
         "#@markdown Please fill in your student id, which is the random seed.\n",
-        "student_id = 106060000 #@param {type:\"number\"}\n",
+        "student_id = 106061236 #@param {type:\"number\"}\n",
         "np.random.seed(student_id)\n",
         "############################################################\n",
         "\n",
@@ -113,7 +113,7 @@
         "\n",
         "############################################################\n",
         "#@markdown Please fill in the statement to generate `y_values` with a quadratic function `y = x^2-5x+1`?\n",
-        "script = \"\" #@param {type:\"string\"}\n",
+        "script = \"y_values = math.pow(x_values,2) - 5*x_values + 1\" #@param {type:\"string\"}\n",
         "exec(script)\n",
         "############################################################\n",
         "\n",
@@ -2398,7 +2398,7 @@
         "\n",
         "############################################################\n",
         "#@markdown How to use the model to predict the result with the test data (`x_test`) and save the result in a variable `predictions`?\n",
-        "script = \"\" #@param {type:\"string\"}\n",
+        "script = \"predictions =model.predict(x_test)\" #@param {type:\"string\"}\n",
         "exec(script)\n",
         "############################################################"
       ],
@@ -2436,7 +2436,7 @@
         "############################################################\n",
         "# Instantiate an interpreter for the TFLite model\n",
         "#@markdown Which is the statement to instantiate an interpreter with a TFLite Model named `model.tflite`?\n",
-        "script_1 = \"\" #@param {type:\"string\"}\n",
+        "script_1 = \"interpreter = tf.lite.Interpreter('model.tflite')\" #@param {type:\"string\"}\n",
         "exec(script_1)\n",
         "############################################################\n",
         "\n",
@@ -2446,14 +2446,14 @@
         "############################################################\n",
         "# Get the input tensors so we can feed in values \n",
         "#@markdown Which is the statement to get input sensors?\n",
-        "script_2 = \"\" #@param {type:\"string\"}\n",
+        "script_2 = \"interpreter_input = interpreter.tensor(interpreter.get_input_details()[0][\\\"index\\\"])\" #@param {type:\"string\"}\n",
         "exec(script_2)\n",
         "############################################################\n",
         "\n",
         "############################################################\n",
         "# Get the output tensors so we can get the results\n",
         "#@markdown Which is the statement to get output sensors?\n",
-        "script_3 = \"\" #@param {type:\"string\"}\n",
+        "script_3 = \"interpreter_output = interpreter.tensor(interpreter.get_output_details()[0][\\\"index\\\"])\" #@param {type:\"string\"}\n",
         "exec(script_3)\n",
         "############################################################\n",
         "\n",
@@ -2464,17 +2464,17 @@
         "for i in range(x_test.size):\n",
         "  ############################################################\n",
         "  #@markdown Which is the statement to fill the input of the interpreter with `x_test[i]`?\n",
-        "  script_4 = \"\" #@param {type:\"string\"}\n",
+        "  script_4 = \"interpreter_input().fill(x_test[i])\" #@param {type:\"string\"}\n",
         "  exec(script_4)\n",
         "  ############################################################\n",
         "  ############################################################\n",
         "  #@markdown Which is the statement to invoke the interpreter?\n",
-        "  script_5 = \"\" #@param {type:\"string\"}\n",
+        "  script_5 = \"interpreter.invoke()\" #@param {type:\"string\"}\n",
         "  exec(script_5)\n",
         "  ############################################################\n",
         "  ############################################################\n",
         "  #@markdown Which is the statement to get the output from the interpreter and save the output in `interpreter_predictions[i]`?\n",
-        "  script_6 = \"\"#@param {type:\"string\"}\n",
+        "  script_6 = \"interpreter_predictions[i] = interpreter_output()[0]\"#@param {type:\"string\"}\n",
         "  exec(script_6)\n",
         "  ############################################################\n",
         "\n",
